--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Legacy</title>
 
   <script src="lib/runic.js"></script>
   <script src="lib/indental.js"></script>
@@ -12,11 +13,11 @@
   <script src="lib/view.js"></script>
   <script src="lib/main.js"></script>
 
+  <script src="lib/templates/home.js"></script>
+
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/fonts.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
-
-  <title>Legacy</title>
 </head>
 <body>
   <script>
