--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="lib/main.js"></script>
 
   <script src="lib/templates/home.js"></script>
+  <script src="lib/templates/project.js"></script>
 
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/fonts.css"/>
