--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <script src="lib/templates/home.js"></script>
   <script src="lib/templates/project.js"></script>
+  <script src="lib/templates/collection.js"></script>
 
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/fonts.css"/>
@@ -24,6 +25,7 @@
   <script>
     var main = new Main();
     main.install();
-    main.start();  </script>
+    main.start();
+  </script>
 </body>
 </html>
