--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="lib/templates/home.js"></script>
   <script src="lib/templates/project.js"></script>
   <script src="lib/templates/collection.js"></script>
+  <script src="lib/templates/tag.js"></script>
 
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/fonts.css"/>
