--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>  
   <meta charset="utf-8">
+  <meta name="author" content="Alexey Botkov">
+  <meta name='description' content='Legacy'/>
+  <meta name='keywords' content='nomand, interactive, runningtap, design, gamedev, research' />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Legacy</title>
 
   <script src="lib/runic.js"></script>
   <script src="lib/indental.js"></script>
 
-  <script type="text/javascript" src="content/database/data.ndtl"></script>
   <script src="lib/wrap.js"></script>
   <script src="lib/view.js"></script>
   <script src="lib/main.js"></script>
@@ -18,9 +19,13 @@
   <script src="lib/templates/collection.js"></script>
   <script src="lib/templates/tag.js"></script>
 
+  <script type="text/javascript" src="content/database/data.ndtl"></script>
+
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/fonts.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
+
+  <title>Legacy</title>
 </head>
 <body>
   <script>
