mirgrated to curlic

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <script src="lib/runic.js"></script>
   <script src="lib/indental.js"></script>
+  <script src="lib/curlic.js"></script>
 
   <script src="lib/wrap.js"></script>
   <script src="lib/view.js"></script>
