--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <script>
-    var main = new Main();
+    let main = new Main();
     main.install();
     main.start();
   </script>
