--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="lib/templates/project.js"></script>
   <script src="lib/templates/collection.js"></script>
   <script src="lib/templates/tag.js"></script>
+  <script src="lib/templates/photo.js"></script>
 
   <script type="text/javascript" src="content/database/data.ndtl"></script>
 
