--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name='description' content='Legacy'/>
   <meta name='keywords' content='nomand, interactive, runningtap, design, gamedev, research' />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="thumbnail" content="" />
+  <meta name="thumbnail" property="og:image" content="" />
 
   <script src="lib/runic.js"></script>
   <script src="lib/indental.js"></script>
