--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>  
   <meta charset="utf-8">
   <meta name="author" content="Alexey Botkov">
-  <meta name='description' content='Legacy'/>
-  <meta name='keywords' content='nomand, interactive, runningtap, design, gamedev, research' />
+  <meta name="description" content="Legacy"/>
+  <meta name="keywords" content="nomand, interactive, runningtap, design, gamedev, research" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="thumbnail" property="og:image" content="" />
+  
+  <meta name="og:url" content=""/>
+  <meta name="og:description" content=""/>
+  <meta name="og:site_name" content="Legacy"/>
+  <meta name="og:title" content=""/>
+  <meta name="og:image" content="" />
 
   <script src="lib/runic.js"></script>
   <script src="lib/indental.js"></script>
