--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="og:site_name" content="Legacy"/>
   <meta name="og:title" content=""/>
   <meta name="og:image" content="" />
+  <meta name="twitter:image" content="" />
 
   <script src="lib/runic.js"></script>
   <script src="lib/indental.js"></script>
