--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <meta name="og:site_name" content="Legacy"/>
   <meta name="og:title" content=""/>
+  <meta name="og:description" content=""/>
   <meta name="og:image" content="" />
   <meta name="twitter:image" content="" />
 
