--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/fonts.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
-
+  <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+  
   <title>Legacy</title>
 </head>
 <body>
