--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <meta name="og:site_name" content="Legacy"/>
-  <meta name="og:title" content=""/>
-  <meta name="og:description" content=""/>
-  <meta name="og:image" content="" />
-  <meta name="twitter:image" content="" />
+  <meta name="og:title" content="Legacy"/>
+  <meta name="og:description" content="Works"/>
+  <meta name="og:image" content="content/images/0050.jpg" />
 
   <script src="lib/runic.js"></script>
   <script src="lib/indental.js"></script>
