--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="og:site_name" content="Legacy"/>
   <meta name="og:title" content="Legacy"/>
   <meta name="og:description" content="Works"/>
-  <meta name="og:image" content="content/images/0050.jpg" />
+  <meta name="og:image" content="http://nomand.co/content/images/0050.jpg" />
 
   <script src="lib/runic.js"></script>
   <script src="lib/indental.js"></script>
