--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="lib/view.js"></script>
   <script src="lib/main.js"></script>
 
+  <script src="lib/templates/constructor.js"></script>
   <script src="lib/templates/home.js"></script>
   <script src="lib/templates/project.js"></script>
   <script src="lib/templates/collection.js"></script>
