--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="lib/templates/constructor.js"></script>
   <script src="lib/templates/home.js"></script>
   <script src="lib/templates/project.js"></script>
+  <script src="lib/templates/index.js"></script>
   <script src="lib/templates/collection.js"></script>
   <script src="lib/templates/tag.js"></script>
   <script src="lib/templates/photo.js"></script>
