fix double init

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <script>
     let main = new Main();
     main.install();
-    main.start();
+    main.init("#home");
   </script>
 </body>
 </html>
