--- a/site/analogue.html
+++ b/site/analogue.html
@@ -226,9 +226,8 @@ Check your local RF regulations in regards to operating on these radio frequenci
 Check your local aviation authorities for UAV operating regulations.
 
 </code></pre>
-<p><img alt="A 3&quot; Drone sitting in palm of a hand, top-front view." loading="lazy" src="../content/images/0008.jpg" />
-<img alt="Closeup shot focusing ont he FPV camera of a 3&quot; racing drone" loading="lazy" src="../content/images/XBL3DroneCamCloseup.webp" />
-<img alt="Closeup shot of a 3&quot; fpv racing drone, side view" loading="lazy" src="../content/images/XBL3DroneSideView.webp" /></p></section>
+<p><img alt="Closeup shot focusing ont he FPV camera of a 3 racing drone." loading="lazy" src="../content/images/XBL3DroneCamCloseup.webp" />
+<img alt="Closeup shot of a 3 fpv racing drone, side view." loading="lazy" src="../content/images/XBL3DroneSideView.webp" /></p></section>
 </main>
 
     <footer>
