--- a/site/vr.html
+++ b/site/vr.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div id="wrap">
-    <header style="background-image: url(''); height: 20vh">
+    <header style="background-image: url('../content/images/OculusQuest2.webp'); height: 70vh">
   <a class="logo" href="home.html"></a>
 </header>
     <nav><section class="site-nav"><section class="topicblock">
