added social thumbnails

--- a/index.html
+++ b/index.html
@@ -2,26 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0;url=site/home.html" />       
-  <link rel="canonical" href="site/home.html" />                     
-    
-  <meta charset="utf-8">
-  <meta name="author" content="Alexey Botkov">
-  <meta name="description" content="Legacy"/>
-  <meta name="keywords" content="portfolio, homepage" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
+  <meta name="description" content="Legacy"/>
+  <meta name="author" content="Alexey Botkov">
+  <meta name="keywords" content="portfolio, homepage" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@nomand">
+  <meta name="twitter:title" content="nomand">
+  <meta name="twitter:description" content="A personal creative archive.">
+  <meta name="twitter:creator" content="@nomand">
+  <meta name="twitter:image" content="https://nomand.co/content/images/OldDeskWorkspace.webp">
+
+  <!-- Facebook -->
+  <meta property="og:title" content="nomand" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://nomand.co" />
+  <meta property="og:image" content="https://nomand.co/content/images/OldDeskWorkspace.webp" />
+  <meta property="og:description" content="A personal creative archive." />
+  <meta property="og:site_name" content="nomand" />
+
+  <!-- Open Graph -->
   <meta name="og:site_name" content="Legacy"/>
   <meta name="og:title" content="Legacy"/>
-  <meta name="og:description" content="Creations by Alexey Botkov."/>
-  <meta name="og:image" content="" />
+  <meta name="og:description" content="A personal creative archive."/>
+  <meta name="og:image" content="content/images/OldDeskWorkspace.webp" />
 
+  <meta http-equiv="refresh" content="0;url=site/home.html" />       
+  <link rel="canonical" href="site/home.html" />
   <link rel="stylesheet" type="text/css" href="src/css/main.css"/>
   <link rel='shortcut icon' type='image/x-icon' href='src/templates/favicon.ico' />
   
   <title>Legacy</title>
 </head>
 <body>
-
+  
 </body>
 </html>
