--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <meta name="og:site_name" content="Legacy"/>
   <meta name="og:title" content="Legacy"/>
   <meta name="og:description" content="A personal creative archive."/>
-  <meta name="og:image" content="content/images/OldDeskWorkspace.webp" />
+  <meta name="og:image" content="https://nomand.co/content/images/OldDeskWorkspace.webp" />
 
   <meta http-equiv="refresh" content="0;url=site/home.html" />       
   <link rel="canonical" href="site/home.html" />
@@ -38,6 +38,6 @@
   <title>Legacy</title>
 </head>
 <body>
-  
+
 </body>
 </html>
