Added Remotely to Digital

--- a/site/zero_king.html
+++ b/site/zero_king.html
@@ -15,11 +15,11 @@
   <link rel="stylesheet" type="text/css" href="../src/css/main.css"/>
   <link rel='shortcut icon' type='image/x-icon' href='../src/templates/favicon.ico' />
   
-  <title>Legacy: swordy</title>
+  <title>Legacy: zero_king</title>
 </head>
 <body>
   <div id="wrap">
-    <header style="background-image: url('../content/images/SwordyClifftopArena.webp'); height: 70vh">
+    <header style="background-image: url('../content/images/ZeroKing01.webp'); height: 70vh">
   <a class="logo" href="home.html"></a>
 </header>
     <nav><section class="site-nav"><section class="topicblock">
@@ -66,13 +66,9 @@
 </section></nav>
 
 <main>
-<section><h1>Swordy</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="swordy.html">Swordy</a></p><p><ul class='toc'></ul></p><p>Swordy is a local-multiplayer physics based brawler, A game I worked on as part of an indie studio I co-founded called (frogshark)[frogshark].
-I was involved from conception in 2014 until late 2016, responsible for some 3D and technical art, level design, sound design, dynamic soundtrack, marketing materials, video editing among other things.</p>
-<p>It was made available on <a href="https://store.steampowered.com/app/467900/SWORDY/" target="_blank">Steam</a> Early Access, but is not finished, nor  supported since the dissolution of the indie studio.</p>
-<p><img alt="Two warriors facing off with sword and shields." loading="lazy" src="../content/images/SwordyScreenshot01.webp" />
-<img alt="Green man chasing a red man with swords surrounded by pixelated blood splatters of character colors." loading="lazy" src="../content/images/SwordyScreenshot02.webp" />
-<img alt="Top down veiw of a battle on a cliff top winter arena." loading="lazy" src="../content/images/SwordyScreenshot03.webp" />
-<img alt="Top down view of an ancient desert ruin arena." loading="lazy" src="../content/images/SwordyScreenshot04.webp" /></p></section>
+<section><h1>Zero King</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="zero_king.html">Zero King</a></p><p><ul class='toc'></ul></p><p>I was a Technical Artist at Zero King, a studio with their first self-titled online competitive space shooter <a href="https://store.steampowered.com/app/2675370/Zero_King/" target="_blank">Zero King</a>.
+I was responsible for defining the early alpha stage visual design and realtime rendering techniques, visual effects and environment lighting.
+Zero King was build using Unity3D engine during my tenure.</p></section>
 </main>
 
     <footer>
