--- a/site/nomand.html
+++ b/site/nomand.html
@@ -31,8 +31,10 @@
 <a class="topic" href="friendship_is_magic.html">Friendship Is Magic</a>
 <a class="topic" href="gamejams.html">Gamejams</a>
 <a class="topic" href="vizcera.html">Vizcera</a>
+<a class="topic" href="zero_king.html">Zero King</a>
 <a class="topic" href="vr.html">Vr</a>
 <a class="topic" href="ice_age_adventures.html">Ice Age Adventures</a>
+<a class="topic" href="remotely.html">Remotely</a>
 <a class="topic" href="gaea.html">Gaea</a>
 <a class="topic" href="swordy.html">Swordy</a>
 <a class="topic" href="letnice.html">Letnice</a>
