--- a/site/remotely.html
+++ b/site/remotely.html
@@ -15,11 +15,11 @@
   <link rel="stylesheet" type="text/css" href="../src/css/main.css"/>
   <link rel='shortcut icon' type='image/x-icon' href='../src/templates/favicon.ico' />
   
-  <title>Legacy: swordy</title>
+  <title>Legacy: remotely</title>
 </head>
 <body>
   <div id="wrap">
-    <header style="background-image: url('../content/images/SwordyClifftopArena.webp'); height: 70vh">
+    <header style="background-image: url('../content/images/RemotelyHQ.webp'); height: 70vh">
   <a class="logo" href="home.html"></a>
 </header>
     <nav><section class="site-nav"><section class="topicblock">
@@ -66,13 +66,10 @@
 </section></nav>
 
 <main>
-<section><h1>Swordy</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="swordy.html">Swordy</a></p><p><ul class='toc'></ul></p><p>Swordy is a local-multiplayer physics based brawler, A game I worked on as part of an indie studio I co-founded called (frogshark)[frogshark].
-I was involved from conception in 2014 until late 2016, responsible for some 3D and technical art, level design, sound design, dynamic soundtrack, marketing materials, video editing among other things.</p>
-<p>It was made available on <a href="https://store.steampowered.com/app/467900/SWORDY/" target="_blank">Steam</a> Early Access, but is not finished, nor  supported since the dissolution of the indie studio.</p>
-<p><img alt="Two warriors facing off with sword and shields." loading="lazy" src="../content/images/SwordyScreenshot01.webp" />
-<img alt="Green man chasing a red man with swords surrounded by pixelated blood splatters of character colors." loading="lazy" src="../content/images/SwordyScreenshot02.webp" />
-<img alt="Top down veiw of a battle on a cliff top winter arena." loading="lazy" src="../content/images/SwordyScreenshot03.webp" />
-<img alt="Top down view of an ancient desert ruin arena." loading="lazy" src="../content/images/SwordyScreenshot04.webp" /></p></section>
+<section><h1>Remotely</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="remotely.html">Remotely</a></p><p><ul class='toc'></ul></p><p>Remotely was an online-first company developing immersive communication tools with a goal of improving emotional wellbeing and engagement of workers in online meetings. I was a Lead Artist on the self-titled project, a realtime 3D online web platform and meeting tool.</p>
+<p>Remotely was built using Unity3D and deployed on the web using WebGL. It was a challenging project from a technical perspective. Unity's WebGL deployment was buggy and underdeveloped at the time and there were huge compatibility and optimizations issues across platforms and browsers.</p>
+<p><img alt="Remotely Screenshot" loading="lazy" src="../content/images/RemotelyMuseum.webp" /></p>
+<p><img alt="Remotely Screenshot" loading="lazy" src="../content/images/RemotelyMoleGame.webp" /></p></section>
 </main>
 
     <footer>
