--- a/site/Irie.html
+++ b/site/Irie.html
@@ -68,7 +68,7 @@
 <main>
 <section><h1>Irie</h1><p><ul class='toc'></ul></p><p>Irie is a 33ft steel sailboat that is my home, my workspace and my playground. It's the biggest project I've ever undertaken, the biggest object I own and marks the most exciting and challenging arc of my life.</p>
 <p>In 2021 I bought Irie with intention to move aboard and forego the common formula for life and take on a cruising lifestyle.</p>
-<p>I moved aboard in 2022 with my partner. Currently undertaking necessary repairs and upgrades to sail around New Zealand in 2023.</p>
+<p>I moved aboard in 2022 with my partner. Currently undertaking necessary repairs and upgrades to set sail.</p>
 <p>This process will be documented in a sister-wiki dedicated to the journey.</p>
 <p><img alt="" loading="lazy" src="../content/images/IrieSchematic.webp" />
 <img alt="" loading="lazy" src="../content/images/IrieForwardHatchSunBeam.webp" />
