--- a/site/zero_king.html
+++ b/site/zero_king.html
@@ -66,9 +66,12 @@
 </section></nav>
 
 <main>
-<section><h1>Zero King</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="zero_king.html">Zero King</a></p><p><ul class='toc'></ul></p><p>I was a Technical Artist at Zero King, a studio with their first self-titled online competitive space shooter <a href="https://store.steampowered.com/app/2675370/Zero_King/" target="_blank">Zero King</a>.
-I was responsible for defining the early alpha stage visual design and realtime rendering techniques, visual effects and environment lighting.
-Zero King was build using Unity3D engine during my tenure.</p></section>
+<section><h1>Zero King</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="zero_king.html">Zero King</a></p><p><ul class='toc'></ul></p><p>I was a Technical Artist at Zero King, a studio with their first self-titled online competitive space shooter <a href="https://store.steampowered.com/app/2675370/Zero_King/" target="_blank">Zero King</a></p>
+<p>I was responsible for defining the early alpha stage visual design and realtime rendering techniques, visual effects and environment lighting for combat alpha.
+Zero King was build using Unity3D engine, using Universal Rendering Pipeline during my tenure.</p>
+<p>
+<iframe allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true" class="youtube-embed" frameborder="0" src="https://www.youtube.com/embed/X3ZBmO_MeHE"></iframe>
+</p></section>
 </main>
 
     <footer>
