--- a/site/cv.html
+++ b/site/cv.html
@@ -15,11 +15,11 @@
   <link rel="stylesheet" type="text/css" href="../src/css/main.css"/>
   <link rel='shortcut icon' type='image/x-icon' href='../src/templates/favicon.ico' />
   
-  <title>Legacy: meta</title>
+  <title>Legacy: cv</title>
 </head>
 <body>
   <div id="wrap">
-    <header style="background-image: url('../content/images/LCDScreenCrack.webp'); height: 50vh">
+    <header style="background-image: url(''); height: 30;vh">
   <a class="logo" href="home.html"></a>
 </header>
     <nav><section class="site-nav"><section class="topicblock">
@@ -68,16 +68,7 @@
 </section></nav>
 
 <main>
-<section><h1>Meta</h1><p><ul class='toc'><li><a href='#support'>Support</a></li><li><a href='#runningtap'>Runningtap</a></li><li><a href='#cv'>Cv</a></li><li><a href='#legacy'>Legacy</a></li><li><a href='#nomand'>Nomand</a></li><li><a href='#sitemap'>Sitemap</a></li></ul></p></section><section><h2><a id='support' href=support.html>Support</a></h2><p><img src='../content/images/DonateBitcoin.webp' loading='lazy'></p><p>I appreciate all the help I can get. If you want to support me on my creative journey, there's more than one way:</p>
-<h3 id="financial">Financial</h3>
-<p>I'm happy to recieve grants, donations and all manner of moneytary help and even gear donations like computers, electronic components, photography equipment etc. All proceeds go towards maintaining life, funding gear, learning resources, service subscriptions that make my less financially viable activities possible.</p>
-<h3 id="social">Social</h3>
-<p>If you feel in any way inspired, you can help my content get afloat by subscribing to my social channels, liking my posts and sharing them with people you know who might also get inspired! The more people I can empower to make positive change in their life, the more people's lives they'll be able to affect positively as well. Linking me up with other creatives that might yield fruitful collaborations is also appreciated!</p>
-<h3 id="emotional">Emotional</h3>
-<p>I love hearing from friends I haven't met yet! If you appreciate what I do, I would appreciate hearing from you, where you may be on your journey and if my content has helped you in any way.</p>
-<h3 id="freelancing">Freelancing</h3>
-<p>I'm constantly inspired by all the creative individuals and collectives out there. I'm always open to knowledge sharing and collaboration. If there's commercial work to be done together, don't hesitate to reach out and we can discuss how our path may run along for fun and profit.</p></section><section><h2><a id='runningtap' href=runningtap.html>Runningtap</a></h2><p><img src='../content/images/RunningtapLogoLoop.gif' loading='lazy'></p><p><em>Runningtap</em> is my business entity through which I offer freelancing, consulting, R&amp;D, prototyping and design services.
-If you're interested in <a href="nomand.html">me</a> working with you, reach out via socials.</p></section><section><h2><a id='cv' href=cv.html>Cv</a></h2><p>I'm a technologist, balancing my creative practices between software, hardware, digital and analogue.</p>
+<section><h1>Cv</h1><p class="breadcrumb"><a href="meta.html">Meta</a>&nbsp ‣ &nbsp<a href="cv.html">Cv</a></p><p><ul class='toc'></ul></p><p>I'm a technologist, balancing my creative practices between software, hardware, digital and analogue.</p>
 <p>Currently doing research in Stable Diffusion workflow design and AI pipelines for generative content authoring. Talk to me if you want to learn more about AI art pipelines and how you can leverage Open Source technologies of this domain at your business.</p>
 <p>I specialize in interactive applications, video games and digital media. I facilitate R&amp;D, design, prototyping, development, user experience research, consulting and project management.</p>
 <p>I have experience with with VR and mobile application development, while primarily working in Unity game engine, doing everything from 2D/3D art and design, animation, motion tracking, motion control, shaders, sound design, music production and tool development.</p>
@@ -121,20 +112,7 @@ Technical Artist on Ice Age Adventures mobile game.</p>
 <h3 id="weta-productions">Weta Productions</h3>
 <h4 id="vfx-artist">VFX Artist</h4>
 <p><em>Dec 2009 - Apr 2010</em><br />
-Visual effects artist on documentary films "Supercontinents" and "Mutant Planet".</p></section><section><h2><a id='legacy' href=legacy.html>Legacy</a></h2><p><img src='../content/images/VintageComputers.webp' loading='lazy'></p><p>Legacy is a wiki-like static site generator written in Python.
-Designed to convert a folder hierarchy with .txt files written in Markdown with custom metadata and custom link parsers to a cross-linked wiki html site.</p>
-<p>Design philosophy:</p>
-<ul>
-<li>Source content is plain text, markdown formatted and readable outside of html renderer.</li>
-<li>Source folder structure reflects output page hierarchy.</li>
-<li>Plain static html, no databases or javascript required.</li>
-<li>Plain root output retains urls so that individual page relationships can change.</li>
-<li>Changes over time can be tracked using <a href="https://github.com/nomand/Legacy/commits/master" target="_blank">github commit tree</a></li>
-</ul>
-<p>Inspired by <a href="https://100r.co" target="_blank">100r</a> and <a href="https://wiki.xxiivv.com" target="_blank">XXIIVV</a></p></section><section><h2><a id='nomand' href=nomand.html>Nomand</a></h2><p><img src='../content/images/BreezeBowsprit.webp' loading='lazy'></p><p><em>nomand</em> is my alias and the name I go by on various networks and communities online.</p>
-<p>I was born in USSR, moved to Aotearoa (New Zealand), living a nomadic life aboard <a href="Irie.html">Irie</a>. I'm a technologist and multimedia artist with projects spanning various disciplines and mediums. <a href="https://en.wikipedia.org/wiki/Monism" target="_blank">Monoist</a>, <a href="https://monoskop.org/images/8/85/Wark_McKenzie_A_Hacker_Manifesto.pdf" target="_blank">hacker</a></p>
-<p><a href="runningtap.html">Work with me</a></p>
-<p>Find how you can support me and my work <a href="support.html">here</a></p></section><section><h2><a id='sitemap' href=sitemap.html>Sitemap</a></h2><p>The following is the sitemap by page hierarchy. Not every topic and page is exposed in the sidebar and as this site grows, things may move around and expand layers deep. Use this to help navigate my content.</p></section>
+Visual effects artist on documentary films "Supercontinents" and "Mutant Planet".</p></section>
 </main>
 
     <footer>
