--- a/site/detritus_memory_dump.html
+++ b/site/detritus_memory_dump.html
@@ -45,6 +45,7 @@
 <a class="topichead" href="meta.html">Meta</a>
 <a class="topic" href="support.html">Support</a>
 <a class="topic" href="runningtap.html">Runningtap</a>
+<a class="topic" href="cv.html">Cv</a>
 <a class="topic" href="legacy.html">Legacy</a>
 <a class="topic" href="nomand.html">Nomand</a>
 <a class="topic" href="sitemap.html">Sitemap</a>
