--- a/site/Irie.html
+++ b/site/Irie.html
@@ -22,7 +22,7 @@
     <header style="background-image: url('../content/images/IrieFirstSplashdown.webp'); height: 70vh">
   <a class="logo" href="home.html"></a>
 </header>
-    <nav><section class="site-nav"><section class="topicblock">
+    <nav class="no-print"><section class="site-nav"><section class="topicblock">
 <a class="topichead" href="Irie.html">Irie</a>
 </section>
 <section class="topicblock">
@@ -73,6 +73,7 @@
 <p>I moved aboard in 2022 with my partner. Currently undertaking necessary repairs and upgrades to set sail.</p>
 <p>This process will be documented in a sister-wiki dedicated to the journey.</p>
 <p><img alt="" loading="lazy" src="../content/images/IrieSchematic.webp" />
+<img alt="" loading="lazy" src="../content/images/IrieFogBridge.webp" />
 <img alt="" loading="lazy" src="../content/images/IrieForwardHatchSunBeam.webp" />
 <img alt="" loading="lazy" src="../content/images/IrieHobsonvilleFog.webp" /></p></section>
 </main>
