--- a/site/digital.html
+++ b/site/digital.html
@@ -22,7 +22,7 @@
     <header style="background-image: url('../content/images/standingdesk.webp'); height: 70vh">
   <a class="logo" href="home.html"></a>
 </header>
-    <nav><section class="site-nav"><section class="topicblock">
+    <nav class="no-print"><section class="site-nav"><section class="topicblock">
 <a class="topichead" href="Irie.html">Irie</a>
 </section>
 <section class="topicblock">
@@ -80,7 +80,7 @@ I work using ComfyUI toolset, developing workflows and experimenting deeply with
 <p>I was responsible for defining the early alpha stage visual design and realtime rendering techniques, visual effects and environment lighting for combat alpha.
 Zero King was build using Unity3D engine, using Universal Rendering Pipeline during my tenure.</p>
 <p>
-<iframe allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true" class="youtube-embed" frameborder="0" src="https://www.youtube.com/embed/X3ZBmO_MeHE"></iframe>
+<iframe allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true" class="youtube-embed" frameborder="0" loading="lazy" src="https://www.youtube.com/embed/X3ZBmO_MeHE"></iframe>
 </p></section><section><h2><a id='vr' href=vr.html>Vr</a></h2><p><img src='../content/images/OculusQuest2.webp' loading='lazy'></p><p>Virtual Reality projects.</p></section><section><h2><a id='ice_age_adventures' href=ice_age_adventures.html>Ice Age Adventures</a></h2><p><img src='../content/images/IceAgeAdventuresCrush.webp' loading='lazy'></p><p>While at Gameloft as a Technical Artist, I helped release the official Ice Age village building game for iOS using Gameloft's in-house engine and tooling. I was responsible for vfx and asset integration pipelines.</p>
 <p><img alt="" loading="lazy" src="../content/images/IceAgeAdventuresSlide.webp" />
 <img alt="" loading="lazy" src="../content/images/IceAgeAdventuresWhale.webp" /></p></section><section><h2><a id='remotely' href=remotely.html>Remotely</a></h2><p><img src='../content/images/RemotelyHQ.webp' loading='lazy'></p><p>Remotely was an online-first company developing immersive communication tools with a goal of improving emotional wellbeing and engagement of workers in online meetings. I was a Lead Artist on the self-titled project, a realtime 3D online web platform and meeting tool.</p>
