--- a/site/zero_king.html
+++ b/site/zero_king.html
@@ -22,7 +22,7 @@
     <header style="background-image: url('../content/images/ZeroKing01.webp'); height: 70vh">
   <a class="logo" href="home.html"></a>
 </header>
-    <nav><section class="site-nav"><section class="topicblock">
+    <nav class="no-print"><section class="site-nav"><section class="topicblock">
 <a class="topichead" href="Irie.html">Irie</a>
 </section>
 <section class="topicblock">
@@ -72,7 +72,7 @@
 <p>I was responsible for defining the early alpha stage visual design and realtime rendering techniques, visual effects and environment lighting for combat alpha.
 Zero King was build using Unity3D engine, using Universal Rendering Pipeline during my tenure.</p>
 <p>
-<iframe allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true" class="youtube-embed" frameborder="0" src="https://www.youtube.com/embed/X3ZBmO_MeHE"></iframe>
+<iframe allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true" class="youtube-embed" frameborder="0" loading="lazy" src="https://www.youtube.com/embed/X3ZBmO_MeHE"></iframe>
 </p></section>
 </main>
 
