--- a/site/edibles.html
+++ b/site/edibles.html
@@ -22,7 +22,7 @@
     <header style="background-image: url('../content/images/coffeeknoll.webp'); height: 50vh">
   <a class="logo" href="home.html"></a>
 </header>
-    <nav><section class="site-nav"><section class="topicblock">
+    <nav class="no-print"><section class="site-nav"><section class="topicblock">
 <a class="topichead" href="Irie.html">Irie</a>
 </section>
 <section class="topicblock">
