--- a/site/stable_diffusion.html
+++ b/site/stable_diffusion.html
@@ -69,8 +69,8 @@
 
 <main>
 <section><h1>Stable Diffusion</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="stable_diffusion.html">Stable Diffusion</a></p><p><ul class='toc'></ul></p><p>I take huge interest in AI. I still cannot believe that the renaissance is happening in our lifetimes.<br />
-I took big interest in Stable Diffusion because of the toolset's ability to steer image generation and have incredible level of control over results.<br />
-I work using ComfyUI toolset, developing workflows and experimenting deeply with tuneability of the system and how to get creative and deliberate outputs.</p></section>
+I took big interest in Stable Diffusion because of the toolset's ability to steer image generation and have incredible level of control over results.</p>
+<p>I work using ComfyUI toolset, developing workflows and experimenting deeply with tuneability of the system and how to get creative and deliberate outputs.</p></section>
 </main>
 
     <footer>
@@ -79,6 +79,7 @@ I work using ComfyUI toolset, developing workflows and experimenting deeply with
         <a class="icon github" href="http://github.com/nomand" target="_blank"></a>
         <a class="icon merveilles" href="https://merveilles.town/@nomand" target="_blank"></a>
         <a class="icon instagram" href="http://instagram.com/nomand" target="_blank"></a>
+        <a class="icon twitter" href="http://twitter.com/nomand" target="_blank"></a>
     </span>
     <div class="credit"><a href="home.html">nomand</a> © some time ago <a href="index.html"></a></div>
     </div>
