--- a/site/analogue.html
+++ b/site/analogue.html
@@ -240,6 +240,7 @@ Check your local aviation authorities for UAV operating regulations.
         <a class="icon github" href="http://github.com/nomand" target="_blank"></a>
         <a class="icon merveilles" href="https://merveilles.town/@nomand" target="_blank"></a>
         <a class="icon instagram" href="http://instagram.com/nomand" target="_blank"></a>
+        <a class="icon twitter" href="http://twitter.com/nomand" target="_blank"></a>
     </span>
     <div class="credit"><a href="home.html">nomand</a> © some time ago <a href="index.html"></a></div>
     </div>
