--- a/site/duality.html
+++ b/site/duality.html
@@ -90,6 +90,7 @@ Download and play on <a href="https://emotiontheory.itch.io/duality-2019" target
         <a class="icon github" href="http://github.com/nomand" target="_blank"></a>
         <a class="icon merveilles" href="https://merveilles.town/@nomand" target="_blank"></a>
         <a class="icon instagram" href="http://instagram.com/nomand" target="_blank"></a>
+        <a class="icon twitter" href="http://twitter.com/nomand" target="_blank"></a>
     </span>
     <div class="credit"><a href="home.html">nomand</a> © some time ago <a href="index.html"></a></div>
     </div>
