--- a/site/home.html
+++ b/site/home.html
@@ -69,7 +69,8 @@
 
 <main>
 <section><h1>Home</h1><p><ul class='toc'></ul></p><p>Welcome to my archive. This is an evolving space where I document some of my creative ongoings.
-The largest portion of all efforts go undocumented, regardless of success or failure.</p></section>
+The largest portion of all efforts go undocumented, regardless of success or failure.</p>
+<p>Current Obsessions are my boat <a href="Irie.html">Irie</a> and <a href="Stable_diffusion.html">AI</a>.</p></section>
 </main>
 
     <footer>
@@ -78,6 +79,7 @@ The largest portion of all efforts go undocumented, regardless of success or fai
         <a class="icon github" href="http://github.com/nomand" target="_blank"></a>
         <a class="icon merveilles" href="https://merveilles.town/@nomand" target="_blank"></a>
         <a class="icon instagram" href="http://instagram.com/nomand" target="_blank"></a>
+        <a class="icon twitter" href="http://twitter.com/nomand" target="_blank"></a>
     </span>
     <div class="credit"><a href="home.html">nomand</a> © some time ago <a href="index.html"></a></div>
     </div>
