--- a/site/letnice.html
+++ b/site/letnice.html
@@ -79,6 +79,7 @@ Standalone live version can be seen <a href="https://nomand.github.io/Letnice" t
         <a class="icon github" href="http://github.com/nomand" target="_blank"></a>
         <a class="icon merveilles" href="https://merveilles.town/@nomand" target="_blank"></a>
         <a class="icon instagram" href="http://instagram.com/nomand" target="_blank"></a>
+        <a class="icon twitter" href="http://twitter.com/nomand" target="_blank"></a>
     </span>
     <div class="credit"><a href="home.html">nomand</a> © some time ago <a href="index.html"></a></div>
     </div>
