--- a/site/pocket_watch.html
+++ b/site/pocket_watch.html
@@ -85,6 +85,7 @@
         <a class="icon github" href="http://github.com/nomand" target="_blank"></a>
         <a class="icon merveilles" href="https://merveilles.town/@nomand" target="_blank"></a>
         <a class="icon instagram" href="http://instagram.com/nomand" target="_blank"></a>
+        <a class="icon twitter" href="http://twitter.com/nomand" target="_blank"></a>
     </span>
     <div class="credit"><a href="home.html">nomand</a> © some time ago <a href="index.html"></a></div>
     </div>
