--- a/site/home.html
+++ b/site/home.html
@@ -70,7 +70,7 @@
 <main>
 <section><h1>Home</h1><p><ul class='toc'></ul></p><p>Welcome to my archive. This is an evolving space where I document some of my creative ongoings.
 The largest portion of all efforts go undocumented, regardless of success or failure.</p>
-<p>Current Obsessions are my boat <a href="Irie.html">Irie</a> and <a href="Stable_diffusion.html">AI</a></p>
+<p>Current Obsessions are my boat <a href="Irie.html">Irie</a> and <a href="stable_diffusion.html">AI</a></p>
 <p>Recruiter? View my <a href="CV.html">CV</a></p>
 <p><a href="nomand.html">About me</a></p></section>
 </main>
