--- a/site/nomand.html
+++ b/site/nomand.html
@@ -69,8 +69,8 @@
 
 <main>
 <section><h1>Nomand</h1><p class="breadcrumb"><a href="meta.html">Meta</a>&nbsp ‣ &nbsp<a href="nomand.html">Nomand</a></p><p><ul class='toc'></ul></p><p><em>nomand</em> is my alias and the name I go by on various networks and communities online.</p>
-<p>I was born in USSR, moved to Aotearoa (New Zealand), living a nomadic life aboard <a href="Irie.html">Irie</a>. I'm a technologist and multimedia artist with projects spanning various disciplines and mediums. <a href="https://en.wikipedia.org/wiki/Monism" target="_blank">Monoist</a>, <a href="https://monoskop.org/images/8/85/Wark_McKenzie_A_Hacker_Manifesto.pdf" target="_blank">hacker</a></p>
-<p><a href="runningtap.html">Work with me</a></p>
+<p>I was born in USSR, moved to Aotearoa (New Zealand), living a nomadic life aboard <a href="Irie.html">Irie</a>. I'm a technologist and multimedia artist with projects spanning various disciplines and mediums. <a href="https://en.wikipedia.org/wiki/Monism" target="_blank">Monist</a>, <a href="https://en.wikipedia.org/wiki/Cypherpunk" target="_blank">Cypherpunk</a> Spiritual being.
+<a href="runningtap.html">Work with me</a></p>
 <p>Find how you can support me and my work <a href="support.html">here</a></p></section>
 </main>
 
