--- a/site/a_dj_for_everyone.html
+++ b/site/a_dj_for_everyone.html
@@ -15,11 +15,11 @@
   <link rel="stylesheet" type="text/css" href="../src/css/main.css"/>
   <link rel='shortcut icon' type='image/x-icon' href='../src/templates/favicon.ico' />
   
-  <title>Legacy: duality</title>
+  <title>Legacy: a_dj_for_everyone</title>
 </head>
 <body>
   <div id="wrap">
-    <header style="background-image: url('../content/images/DualityScreenshot01.webp'); height: 70vh">
+    <header style="background-image: url('../content/images/adjforeveryone.webp'); height: 70vh">
   <a class="logo" href="home.html"></a>
 </header>
     <nav class="no-print"><section class="site-nav"><section class="topicblock">
@@ -68,20 +68,9 @@
 </section></nav>
 
 <main>
-<section><h1>Duality</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="gamejams.html">Gamejams</a>&nbsp ‣ &nbsp<a href="duality.html">Duality</a></p><p><ul class='toc'></ul></p><p>Duality is a two player Dash'n'Slash game, created in 48 hours for KiwiJam 2019 in collaboration with <a href="https://www.emotiontheory.com/" target="_blank">Adam Thompson</a>.</p>
-<p>Made using:
-* Unity3D
-* Speed tree
-* Quixel Mixer &amp; Megascans
-* Substance Painter
-* MapMagic
-* Adobe Mixamo
-* Autodesk tools</p>
-<p>Watch gameplay video on <a href="https://www.youtube.com/watch?v=Mgo5n7YalgA" target="_blank">youtube</a>
-Download and play on <a href="https://emotiontheory.itch.io/duality-2019" target="_blank">itch.io</a></p>
-<p><img alt="Two neon characters glowing magenta and yellow clashing with sparks going everywhere." loading="lazy" src="../content/images/DualityScreenshot02.webp" />
-<img alt="A neon yellow character dashing away from the magenta one, surrounded by giant crystals and a dead tree." loading="lazy" src="../content/images/DualityScreenshot03.webp" />
-<img alt="Neon characters dashing towards each other leaving glowing trails behind them." loading="lazy" src="../content/images/DualityScreenshot03.webp" /></p></section>
+<section><h1>A Dj For Everyone</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="ai.html">Ai</a>&nbsp ‣ &nbsp<a href="a_dj_for_everyone.html">A Dj For Everyone</a></p><p><ul class='toc'></ul></p><p><strong>There's a DJ for Everyone</strong> is an AI animation experiment.</p>
+<p>It utilizes Stable Diffusion, IPAdapter, AnimateDiff models along with various upscalers and interpolators to achieve a set of psychedelic morphing loops that explore a variety of visual and music styles.</p>
+<p>Animations can be seen on the project <a href="https://tiktok.com/@sreflab" target="_blank">TikTok</a></p></section>
 </main>
 
     <footer>
