--- a/site/ai.html
+++ b/site/ai.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" type="text/css" href="../src/css/main.css"/>
   <link rel='shortcut icon' type='image/x-icon' href='../src/templates/favicon.ico' />
   
-  <title>Legacy: stable_diffusion</title>
+  <title>Legacy: ai</title>
 </head>
 <body>
   <div id="wrap">
@@ -28,13 +28,13 @@
 <section class="topicblock">
 <a class="topichead" href="digital.html">Digital</a>
 <a class="topic" href="how_to_adhd.html">How To Adhd</a>
-<a class="topic" href="stable_diffusion.html">Stable Diffusion</a>
 <a class="topic" href="friendship_is_magic.html">Friendship Is Magic</a>
 <a class="topic" href="gamejams.html">Gamejams</a>
 <a class="topic" href="vizcera.html">Vizcera</a>
 <a class="topic" href="zero_king.html">Zero King</a>
 <a class="topic" href="vr.html">Vr</a>
 <a class="topic" href="ice_age_adventures.html">Ice Age Adventures</a>
+<a class="topic" href="ai.html">Ai</a>
 <a class="topic" href="remotely.html">Remotely</a>
 <a class="topic" href="gaea.html">Gaea</a>
 <a class="topic" href="swordy.html">Swordy</a>
@@ -68,9 +68,10 @@
 </section></nav>
 
 <main>
-<section><h1>Stable Diffusion</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="stable_diffusion.html">Stable Diffusion</a></p><p><ul class='toc'></ul></p><p>I take huge interest in AI. I still cannot believe that the renaissance is happening in our lifetimes.<br />
-I took big interest in Stable Diffusion because of the toolset's ability to steer image generation and have incredible level of control over results.</p>
-<p>I work using ComfyUI toolset, developing scalable workflows and experimenting deeply with tuneability of the system and how to get creative and deliberate outputs. </p></section>
+<section><h1>Ai</h1><p class="breadcrumb"><a href="digital.html">Digital</a>&nbsp ‣ &nbsp<a href="ai.html">Ai</a></p><p><ul class='toc'><li><a href='#a_dj_for_everyone'>A Dj For Everyone</a></li></ul></p><p>I got into AI since Deepdream first imagined dog faces in 2016.</p>
+<p>Ever since ComfyUI github repo went live, I was hooked. This is a gift of our lifetimes.</p></section><section><h2><a id='a_dj_for_everyone' href=a_dj_for_everyone.html>A Dj For Everyone</a></h2><p><img src='../content/images/adjforeveryone.webp' loading='lazy'></p><p><strong>There's a DJ for Everyone</strong> is an AI animation experiment.</p>
+<p>It utilizes Stable Diffusion, IPAdapter, AnimateDiff models along with various upscalers and interpolators to achieve a set of psychedelic morphing loops that explore a variety of visual and music styles.</p>
+<p>Animations can be seen on the project <a href="https://tiktok.com/@sreflab" target="_blank">TikTok</a></p></section>
 </main>
 
     <footer>
