--- a/site/home.html
+++ b/site/home.html
@@ -28,13 +28,13 @@
 <section class="topicblock">
 <a class="topichead" href="digital.html">Digital</a>
 <a class="topic" href="how_to_adhd.html">How To Adhd</a>
-<a class="topic" href="stable_diffusion.html">Stable Diffusion</a>
 <a class="topic" href="friendship_is_magic.html">Friendship Is Magic</a>
 <a class="topic" href="gamejams.html">Gamejams</a>
 <a class="topic" href="vizcera.html">Vizcera</a>
 <a class="topic" href="zero_king.html">Zero King</a>
 <a class="topic" href="vr.html">Vr</a>
 <a class="topic" href="ice_age_adventures.html">Ice Age Adventures</a>
+<a class="topic" href="ai.html">Ai</a>
 <a class="topic" href="remotely.html">Remotely</a>
 <a class="topic" href="gaea.html">Gaea</a>
 <a class="topic" href="swordy.html">Swordy</a>
@@ -70,7 +70,7 @@
 <main>
 <section><h1>Home</h1><p><ul class='toc'></ul></p><p>Welcome to my archive. This is an evolving space where I document some of my creative ongoings.
 The largest portion of all efforts go undocumented, regardless of success or failure.</p>
-<p>Current Obsessions are my boat <a href="Irie.html">Irie</a> and <a href="stable_diffusion.html">AI</a></p>
+<p>Current Obsessions are my boat <a href="Irie.html">Irie</a> and <a href="ai.html">AI</a></p>
 <p>Recruiter? View my <a href="cv.html">CV</a></p>
 <p><a href="nomand.html">About me</a></p></section>
 </main>
