--- a/site/meta.html
+++ b/site/meta.html
@@ -28,13 +28,13 @@
 <section class="topicblock">
 <a class="topichead" href="digital.html">Digital</a>
 <a class="topic" href="how_to_adhd.html">How To Adhd</a>
-<a class="topic" href="stable_diffusion.html">Stable Diffusion</a>
 <a class="topic" href="friendship_is_magic.html">Friendship Is Magic</a>
 <a class="topic" href="gamejams.html">Gamejams</a>
 <a class="topic" href="vizcera.html">Vizcera</a>
 <a class="topic" href="zero_king.html">Zero King</a>
 <a class="topic" href="vr.html">Vr</a>
 <a class="topic" href="ice_age_adventures.html">Ice Age Adventures</a>
+<a class="topic" href="ai.html">Ai</a>
 <a class="topic" href="remotely.html">Remotely</a>
 <a class="topic" href="gaea.html">Gaea</a>
 <a class="topic" href="swordy.html">Swordy</a>
@@ -77,13 +77,12 @@
 <p>I love hearing from friends I haven't met yet! If you appreciate what I do, I would appreciate hearing from you, where you may be on your journey and if my content has helped you in any way.</p>
 <h3 id="freelancing">Freelancing</h3>
 <p>I'm constantly inspired by all the creative individuals and collectives out there. I'm always open to knowledge sharing and collaboration. If there's commercial work to be done together, don't hesitate to reach out and we can discuss how our path may run along for fun and profit.</p></section><section><h2><a id='runningtap' href=runningtap.html>Runningtap</a></h2><p><img src='../content/images/RunningtapLogoLoop.gif' loading='lazy'></p><p><em>Runningtap</em> is my business entity through which I offer freelancing, consulting, R&amp;D, prototyping and design services.
-If you're interested in <a href="nomand.html">me</a> working with you, reach out via socials.</p></section><section><h2><a id='cv' href=cv.html>Cv</a></h2><p>I'm a technologist, balancing my creative practices between software, hardware, digital and analogue.</p>
-<p>Currently doing research in Stable Diffusion workflow design and AI pipelines for generative content authoring. Talk to me if you want to learn more about AI art pipelines and how you can leverage Open Source technologies of this domain at your business.</p>
-<p>I specialize in interactive applications, video games and digital media. I facilitate R&amp;D, design, prototyping, development, user experience research, consulting and project management.</p>
-<p>I have experience with with VR and mobile application development, while primarily working in Unity game engine, doing everything from 2D/3D art and design, animation, motion tracking, motion control, shaders, sound design, music production and tool development.</p>
-<p>I have experience prototyping with IoT hardware such as Raspberry Pi, arduino and ESP32 and UAV drone technology. I've done CAD and small run manufacturing using CNC machines, working with wood, metal and carbon fibre.</p>
-<p>I've been involved in a number of social media campaigns for past projects, front-end web development, photography, podcasting, video production for interviews, video game trailers and youtube format content.</p>
-<p>I'm interested working with companies that aren't shy to invest in unknown futures and support R&amp;D efforts to open new business opportunities.</p>
+If you're interested in <a href="nomand.html">me</a> working with you, reach out via socials.</p></section><section><h2><a id='cv' href=cv.html>Cv</a></h2><p>I'm a technologist, and a multi-disciplinary tech artist specializing in interactive applications and digital media.</p>
+<p>Currently engaged in AI content creation pipelines, Stable Diffusion, ComfyUI workflow design and AI pipelines for generative content authoring. Talk to me if you want to learn more about AI and how you can leverage Open Source technologies at your business.
+I facilitate R&amp;D, design, prototyping, development, user experience research, consulting and project management.</p>
+<p>I have experience with with VR and mobile application development, 2D/3D art, animation, motion tracking, motion control, shader and graphics pipeline development and tooling.</p>
+<p>On the hardware side I've worked with FDM prototyping and IoT hardware such as Raspberry Pi, arduino and ESP32 and UAV drone technology. I've done CAD and small run manufacturing using CNC machines, working with wood, metal and carbon fiber.</p>
+<p>I'm interested working with early stage startups and companies that invest in R&amp;D efforts to open new creative and business opportunities.</p>
 <h3 id="zero-king"><a href="Zero_King.html">Zero King</a></h3>
 <h4 id="technical-artist"><em>Technical Artist</em></h4>
 <p><em>Aug 2023 - Dec 2023</em><br />
@@ -121,7 +120,14 @@ Technical Artist on Ice Age Adventures mobile game.</p>
 <h3 id="weta-productions">Weta Productions</h3>
 <h4 id="vfx-artist">VFX Artist</h4>
 <p><em>Dec 2009 - Apr 2010</em><br />
-Visual effects artist on documentary films "Supercontinents" and "Mutant Planet".</p></section><section><h2><a id='legacy' href=legacy.html>Legacy</a></h2><p><img src='../content/images/VintageComputers.webp' loading='lazy'></p><p>Legacy is a wiki-like static site generator written in Python.
+Visual effects artist on documentary films "Supercontinents" and "Mutant Planet".</p>
+<h2 id="education">Education</h2>
+<h3 id="auckland-university-of-technology_1">Auckland University of technology</h3>
+<h4 id="masters-degree-creative-technologies"><em>Master's Degree, Creative Technologies</em></h4>
+<p><em>2014 - 2016</em></p>
+<h3 id="auckland-university-of-technology_2">Auckland University of technology</h3>
+<h4 id="bachelors-degree-digital-design"><em>Bachelor's Degree, Digital Design</em></h4>
+<p><em>2006 - 2009</em></p></section><section><h2><a id='legacy' href=legacy.html>Legacy</a></h2><p><img src='../content/images/VintageComputers.webp' loading='lazy'></p><p>Legacy is a wiki-like static site generator written in Python.
 Designed to convert a folder hierarchy with .txt files written in Markdown with custom metadata and custom link parsers to a cross-linked wiki html site.</p>
 <p>Design philosophy:</p>
 <ul>
