--- a/site/cv.html
+++ b/site/cv.html
@@ -28,13 +28,13 @@
 <section class="topicblock">
 <a class="topichead" href="digital.html">Digital</a>
 <a class="topic" href="how_to_adhd.html">How To Adhd</a>
-<a class="topic" href="stable_diffusion.html">Stable Diffusion</a>
 <a class="topic" href="friendship_is_magic.html">Friendship Is Magic</a>
 <a class="topic" href="gamejams.html">Gamejams</a>
 <a class="topic" href="vizcera.html">Vizcera</a>
 <a class="topic" href="zero_king.html">Zero King</a>
 <a class="topic" href="vr.html">Vr</a>
 <a class="topic" href="ice_age_adventures.html">Ice Age Adventures</a>
+<a class="topic" href="ai.html">Ai</a>
 <a class="topic" href="remotely.html">Remotely</a>
 <a class="topic" href="gaea.html">Gaea</a>
 <a class="topic" href="swordy.html">Swordy</a>
@@ -68,13 +68,12 @@
 </section></nav>
 
 <main>
-<section><h1>Cv</h1><p class="breadcrumb"><a href="meta.html">Meta</a>&nbsp ‣ &nbsp<a href="cv.html">Cv</a></p><p><ul class='toc'></ul></p><p>I'm a technologist, balancing my creative practices between software, hardware, digital and analogue.</p>
-<p>Currently doing research in Stable Diffusion workflow design and AI pipelines for generative content authoring. Talk to me if you want to learn more about AI art pipelines and how you can leverage Open Source technologies of this domain at your business.</p>
-<p>I specialize in interactive applications, video games and digital media. I facilitate R&amp;D, design, prototyping, development, user experience research, consulting and project management.</p>
-<p>I have experience with with VR and mobile application development, while primarily working in Unity game engine, doing everything from 2D/3D art and design, animation, motion tracking, motion control, shaders, sound design, music production and tool development.</p>
-<p>I have experience prototyping with IoT hardware such as Raspberry Pi, arduino and ESP32 and UAV drone technology. I've done CAD and small run manufacturing using CNC machines, working with wood, metal and carbon fibre.</p>
-<p>I've been involved in a number of social media campaigns for past projects, front-end web development, photography, podcasting, video production for interviews, video game trailers and youtube format content.</p>
-<p>I'm interested working with companies that aren't shy to invest in unknown futures and support R&amp;D efforts to open new business opportunities.</p>
+<section><h1>Cv</h1><p class="breadcrumb"><a href="meta.html">Meta</a>&nbsp ‣ &nbsp<a href="cv.html">Cv</a></p><p><ul class='toc'></ul></p><p>I'm a technologist, and a multi-disciplinary tech artist specializing in interactive applications and digital media.</p>
+<p>Currently engaged in AI content creation pipelines, Stable Diffusion, ComfyUI workflow design and AI pipelines for generative content authoring. Talk to me if you want to learn more about AI and how you can leverage Open Source technologies at your business.
+I facilitate R&amp;D, design, prototyping, development, user experience research, consulting and project management.</p>
+<p>I have experience with with VR and mobile application development, 2D/3D art, animation, motion tracking, motion control, shader and graphics pipeline development and tooling.</p>
+<p>On the hardware side I've worked with FDM prototyping and IoT hardware such as Raspberry Pi, arduino and ESP32 and UAV drone technology. I've done CAD and small run manufacturing using CNC machines, working with wood, metal and carbon fiber.</p>
+<p>I'm interested working with early stage startups and companies that invest in R&amp;D efforts to open new creative and business opportunities.</p>
 <h3 id="zero-king"><a href="Zero_King.html">Zero King</a></h3>
 <h4 id="technical-artist"><em>Technical Artist</em></h4>
 <p><em>Aug 2023 - Dec 2023</em><br />
@@ -112,7 +111,14 @@ Technical Artist on Ice Age Adventures mobile game.</p>
 <h3 id="weta-productions">Weta Productions</h3>
 <h4 id="vfx-artist">VFX Artist</h4>
 <p><em>Dec 2009 - Apr 2010</em><br />
-Visual effects artist on documentary films "Supercontinents" and "Mutant Planet".</p></section>
+Visual effects artist on documentary films "Supercontinents" and "Mutant Planet".</p>
+<h2 id="education">Education</h2>
+<h3 id="auckland-university-of-technology_1">Auckland University of technology</h3>
+<h4 id="masters-degree-creative-technologies"><em>Master's Degree, Creative Technologies</em></h4>
+<p><em>2014 - 2016</em></p>
+<h3 id="auckland-university-of-technology_2">Auckland University of technology</h3>
+<h4 id="bachelors-degree-digital-design"><em>Bachelor's Degree, Digital Design</em></h4>
+<p><em>2006 - 2009</em></p></section>
 </main>
 
     <footer>
